# CnC_Generals_Zero_Hour

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakeLists_test.txt  DIRECTX.md  LICENSE.md  MIGRATION.md  README.md  SHADERS.md  agents.md  capital_folders.txt  directx.md  files.sh  files_common_include.txt  migration.md  patch.diff  patch.sh  paths.md  shaders.md  stlport.diff  test_build.sh
lib/: CMakeLists.txt  CMakeLists.txt.rej  README.md
lib/STLport/stl/: _config.h  _threads.h
lib/UniSpySDK/common/: gsPlatform.h
lib/d3d8_gles/: CMakeLists.txt  README.md
lib/d3d8_gles/include/: d3d8_defs.h  d3d8_gles_impl.h  d3d8_math_impl.h  d3d8_to_gles.h  d3d8_to_gles_old.h  d3dx_inline_fix.h  objbase.h  windows.h
lib/d3d8_gles/src/: d3d8_core.c  d3d8_device.c  d3d8_internal.h  d3d8_resources.c  d3d8_state.c  d3d8_to_gles.c  d3d8_to_gles_original.c  d3dx_buffer.c  d3dx_math.c  d3dx_mesh.c  d3dx_mesh_loader.c  d3dx_mesh_shapes.c  d3dx_stubs.c  d3dx_texture.c  gles_backend.c  gles_helpers.c  x_mesh_parser.c  x_mesh_parser.h
lib/d3d8_gles/tests/: CMakeLists.txt  adjacency_optimize_test.c  clone_mesh_test.c  compute_bounding_box_test.c  compute_bounding_sphere_test.c  compute_normals_test.c  create_texture_test.c  cylinder_test.c  filter_texture_test.c  get_adapter_display_mode_test.c  matrix_lookatrh_test.c  ortho_test.c  perspective_fovrh_test.c  rotation_quaternion_test.c  shader_constant_test.c  two_stage_render_test.c  vec3_transform_test.c
lib/liblzhl/: CMakeLists.txt  CMakePresets.json  LZHLConfig.cmake  README.md  cmakepresets.json  license
lib/liblzhl/cmake/: targetexports.cmake
lib/liblzhl/src/: _huff.h  _lz.h  _lzhl.h  huff.cpp  lz.cpp  lzhl.cpp
lib/lodepng/: CMakeLists.txt
lib/lvgl/: .gitignore  .pre-commit-config.yaml  lv_conf.h
lib/lvgl/.devcontainer/: __build_all.sh__
lib/lvgl/.github/: pull_request_template.md
lib/lvgl/docs/: .gitignore
lib/lvgl/tests/: .gitignore  CMakeLists.txt
lib/miles-sdk-stub/: CMakeLists.txt  README.md  miles.c  miles.def  readme.md
lib/miles-sdk-stub/mss/: mss.h
lib/miles_sdk_stub/: CMakeLists.txt  cleanup.c  miles.c
lib/miles_sdk_stub/mss/: mss.h
lib/miniaudio/: miniaudio.h
lib/stlport/: readme.md  stl_user_config.h
lib/stlport/config/: stl_wince.h
lib/uGLES/: readme.md
lib/uGLES/src/: gl_thread.c
lib/u_gles/: CMakeLists.txt
lib/u_gles/src/: gl_thread.c
lib/uni_spy_sdk/common/: gsAssert.c  gsPlatformUtil.h
lib/zlib/: CMakeLists.txt  ChangeLog  INDEX  changelog  cmakelists.txt  maketree.c  zconf.h  zlib.html
lib/zlib/contrib/: README.contrib
lib/zlib/msdos/: zlib.rc
src/: CMakeLists.txt  agents.md  main.cpp
src/Common/: File.cpp  Logger.cpp  registry.cpp
src/GameEngine/: CMakeLists.txt
src/GameEngine/Common/: BitFlags.cpp  CRCDebug.cpp  CommandLine.cpp  DamageFX.cpp  Dict.cpp  DiscreteCircle.cpp  GameEngine.cpp  GameLOD.cpp  GameMain.cpp  GlobalData.cpp  Language.cpp  MessageStream.cpp  MiniLog.cpp  MultiplayerSettings.cpp  PartitionSolver.cpp  PerfTimer.cpp  RandomValue.cpp  Recorder.cpp  SkirmishBattleHonors.cpp  StateMachine.cpp  StatsCollector.cpp  TerrainTypes.cpp  UserPreferences.cpp  crc.cpp  version.cpp
src/GameEngine/GameClient/: Credits.cpp  DisplayString.cpp  DrawGroupInfo.cpp  Drawable.cpp  Eva.cpp  FXList.cpp  GameClient.cpp  GameClientDispatch.cpp  GameText.cpp  GlobalLanguage.cpp  GraphDraw.cpp  InGameUI.cpp  LanguageFilter.cpp  MapUtil.cpp  RadiusDecal.cpp  SelectionInfo.cpp  Statistics.cpp  VideoPlayer.cpp  VideoStream.cpp  View.cpp  Water.cpp
src/GameEngine/GameNetwork/: ConnectionManager.cpp  DisconnectManager.cpp  DownloadManager.cpp  FirewallHelper.cpp  FrameData.cpp  FrameMetrics.cpp  GUIUtil.cpp  GameInfo.cpp  GameMessageParser.cpp  GameSpy.cpp  GameSpyChat.cpp  GameSpyGP.cpp  GameSpyGameInfo.cpp  GameSpyOverlay.cpp  LANAPI.cpp  LANAPICallbacks.cpp  LANAPIhandlers.cpp  LANGameInfo.cpp  NetCommandMsg.cpp  NetCommandWrapperList.cpp  NetMessageStream.cpp  Network.cpp  NetworkUtil.cpp  Transport.cpp  User.cpp  udp.cpp
src/GameEngineDevice/: CMakeLists.txt
src/GameEngineDevice/MilesAudioDevice/: MilesAudioManager.cpp
src/GameEngineDevice/lvglDevice/: CMakeLists.txt
src/Libraries/Compression/: CMakeLists.txt  CompressionManager.cpp
src/Libraries/WPAudio/: AUD_Assert.cpp  AUD_Attributes.cpp  AUD_Cache.cpp  AUD_DSoundDriver.cpp  AUD_Device.cpp  AUD_Lock.cpp  AUD_Profiler.cpp  AUD_Time.cpp  AUD_Windows.cpp
src/Libraries/WWVegas/: CMakeLists.txt
src/LvglGameEngine/: LvglGameEngine.cpp  LvglGameEngine.h
src/LvglInput/: LvglKeyboard.cpp  LvglKeyboard.h  LvglMouse.cpp  LvglMouse.h
src/LvglPlatform/: LvglPlatform.cpp  LvglPlatform.h
src/Main/: CMakeLists.txt  RTS.RC  WinMain.cpp
src/Tools/: CMakeLists.txt
src/Tools/Autorun/: ARGS.CPP  ARGS.H  CDCNTRL.H  DrawButton.cpp  GETCD.CPP  GameText.cpp  GameText.h  GetCD.h  IGR.cpp  Jsupport.cpp  Locale_API.cpp  TTFont.cpp  Utils.h  ViewHTML.cpp  ViewHTML.h  WSYS_FileSystem.cpp  WSYS_RAMFile.cpp  WSYS_StdFile.cpp  WSYS_StdFileSystem.cpp  WSYS_file.h  WinFix.CPP  Wnd_File.h  Wnd_file.cpp  autorun.cpp  gimex.h  locale.cpp
src/Tools/Babylon/: DlgProxy.h  ProceedDlg.cpp  Report.cpp  TransDB.h  VerifyTextDlg.cpp  XLStuff.h  bin.h  expimp.h  iff.cpp  loadsave.cpp  loadsave.h  noxstring.dsp  noxstring.reg  noxstringDlg.cpp  transcs.cpp
src/Tools/CRCDiff/: CRCDiff.dsp  KVPair.h  debug.cpp  top.html
src/Tools/Compress/: CMakeLists.txt  Compress.cpp
src/Tools/DebugWindow/: DebugWindow.cpp  DebugWindow.dsp  Resource.h  StdAfx.h
src/Tools/ImagePacker/: ImagePacker.dsp
src/Tools/Launcher/: BFISH.CPP  BFISH.H  Protect.cpp  (+15 more)
src/common/: Logger.cpp  file.cpp  logger.cpp  registry.cpp
src/examples/: CMakeLists.txt
src/game_engine/: CMakeLists.txt
src/game_engine_device/: CMakeLists.txt
src/lvgl_game_engine/: lvgl_game_engine.cpp
src/lvgl_game_platform/: LvglGameEngine.cpp
src/lvgl_platform/: lvgl_platform.cpp
src/main/: CMakeLists.txt  CMakeLists_new.txt  WinMain.cpp  main.cpp  main_d3d_simple.cpp  main_d3d_test.cpp  main_minimal.cpp  win_main.cpp
src/tools/: CMakeLists.txt
(+9075 files in other folders)
